# spells-lib

./: CMakeLists.txt  README.md  index.js  package.json
cmake/: spellslibConfig.cmake.in
include/spellslib/: champion.hpp  spell.hpp  spellslib.hpp
include/spellslib/champions/: annie.hpp  briar.hpp  gnar.hpp  gwen.hpp  jax.hpp  kayle.hpp  kindred.hpp  malphite.hpp  naafiri.hpp  orianna.hpp  teemo.hpp  trundle.hpp  varus.hpp  yorick.hpp
scripts/: test  test.ps1
tests/: CMakeLists.txt  test_gnar.cpp  test_main.cpp
